2005-12-30 Mikhail Khodjaiants
	Cleanup.
	* CModule.java
	* CThread.java
	* CValue.java

2005-12-29 Mikhail Khodjaiants
	Temporary fix for bug 122344: Memory monitors are not shown in the Memory view.
	* CMemoryBlockRetrievalExtension.java

2005-12-29 Mikhail Khodjaiants
	Bug 122336: Use the asynchronous tree viewer in the Modules view.
	Grouped the modules-related methods of ICDebugTarget under the 
	new IModuleRetrieval interface.
	* ICDebugTarget.java
	+ IModuleRetrieval.java
	* CDebugElement.java
	* CDebugTarget.java
	* CModuleManager.java

2005-12-27 Mikhail Khodjaiants
	Bug 109526: Support Eclipse-LazyStart and deprecate Eclipse-AutoStart.
	* MANIFEST.MF

2005-12-16 Mikhail Khodjaiants
	Bug 118809: Failure to evaluate stack frame.
	Previous fix didn't work for stack depths > 100.
	* CThread.java

2005-12-08 Mikhail Khodjaiants
	Bug 118809: Failure to evaluate stack frame.
	* CThread.java

2005-11-28 Mikhail Khodjaiants
	Bug 118272: Invalid stack trace when stepping out of function.
	* CThread.java

2005-11-07 Mikhail Khodjaiants
	Bug 115385: Pointer to a structure is not updated correctly
	* CVariable.java

2005-10-24 Mikhail Khodjaiants
	Fix for bugs 112008 and 111828.
	Applied modified patch from Matthias Spycher (matthias@coware.com).
	* CBreakpointManager.java

2005-09-30 Mikhail Khodjaiants
	Partial fix for bug 109950: Major crash and stack overflow if two projects reference each other.
	* CDebugTarget.java
	* CSourceLookupDirector.java

2005-09-16 Mikhail Khodjaiants
	Bug 109785: "mi_cmd_var_create: unable to create variable object" when stepping out of stack frame.
	* CStackFrame.java

2005-09-09 Mikhail Khodjaiants
	Bug 109206: Last register group is not added if it has only one register.
	* CRegisterManager.java

2005-09-06 Mikhail Khodjaiants
	Cleanup: replaced "new Boolean" by the static Boolean objects (Java 1.4).
	* CDebugUtils.java
	* CDIDebugModel.java
	* CBreakpointManager.java
	* CDebugTarget.java
	* CGlobalValue.java
	* CRegisterGroup.java